# faas-wasi-runtime-example

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
