[package]
name = "faas-wasi-runtime-example"
version = "0.1.0"
authors = ["Daniel Bevenius <daniel.bevenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faas-wasm-runtime-image = { path = "../faas-wasi-runtime-image" }
wasmtime-jit = { git = "https://github.com/CraneStation/wasmtime", package = "wasmtime-jit", rev = "b7d86af0ec6dc6c3d228728f1ce47d0a0033c05f" }
url = "2.1.1"
hyper = "0.11.7"
