[package]
name = "faas-wasi-runtime-example"
version = "0.1.0"
authors = ["Daniel Bevenius <daniel.bevenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faas-wasm-runtime = { path = "../faas-wasi-runtime-image" }
wasmtime = "0.11.0"
wasmtime-jit = "0.11.0"
url = "2.1.1"
hyper = "0.11.7"
